Assignement-03/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: python-app
  template:
    metadata:
      labels:
        app: python-app
    spec:
      containers:
      - name: python-app
        image: akshaykumart/talking-landing:latest
        ports:
        - containerPort: 5000
        readinessProbe:
          httpGet:
            path: /metrics
            port: 5000
